@@ -4,6 +4,8 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import uk.gov.hmcts.cp.filters.CorrelationIdService;
 import uk.gov.hmcts.cp.hmac.services.EncodingService;
 import uk.gov.hmcts.cp.hmac.services.HmacKeyService;
 import uk.gov.hmcts.cp.subscription.entities.ClientSubscriptionEntity;
@@ -12,16 +14,19 @@ import uk.gov.hmcts.cp.subscription.integration.IntegrationTestBase;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.header;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
-import static uk.gov.hmcts.cp.subscription.model.EntityEventType.PRISON_COURT_REGISTER_GENERATED;
 
 class SubscriptionCreateControllerIntegrationTest extends IntegrationTestBase {
 
     private static final String SUBSCRIPTION_REQUEST_VALID = "stubs/requests/subscription/subscription-request-valid.json";
 
+    @MockitoBean
+    CorrelationIdService correlationIdService;
     @Autowired
     HmacKeyService hmacKeyService;
     @Autowired
@@ -32,8 +37,11 @@ class SubscriptionCreateControllerIntegrationTest extends IntegrationTestBase {
         clearClientSubscriptionTable();
     }
 
+    String correlationId = "7fb1372b-a701-4e3c-840d-e22cac5af69f";
+
     @Test
     void create_subscription_should_save_subscription_with_hmac() throws Exception {
+        when(correlationIdService.randomString()).thenReturn(correlationId);
         String body = loadPayload(SUBSCRIPTION_REQUEST_VALID);
         String expectedSecret = encodingService.encodeWithBase64(hmacKeyService.generateKey().getSecret());
         mockMvc.perform(post("/client-subscriptions")
@@ -42,10 +50,11 @@ class SubscriptionCreateControllerIntegrationTest extends IntegrationTestBase {
                         .content(body))
                 .andDo(print())
                 .andExpect(status().isCreated())
+                .andExpect(header().stringValues("X-Correlation-Id", correlationId))
                 .andExpect(jsonPath("$.clientSubscriptionId").exists())
-                .andExpect(jsonPath("$.eventTypes.[0]").value(PRISON_COURT_REGISTER_GENERATED.name()))
+                .andExpect(jsonPath("$.eventTypes.[0]").value("PRISON_COURT_REGISTER_GENERATED"))
                 .andExpect(jsonPath("$.createdAt").exists())
-                .andExpect(jsonPath("$.hmac.keyId").value("kid_f4f5dc10-d6d8-4e94-8b02-459c4121aad0"))
+                .andExpect(jsonPath("$.hmac.keyId").value("kid-f4f5dc10-d6d8-4e94-8b02-459c4121aad0"))
                 .andExpect(jsonPath("$.hmac.secret").value(expectedSecret));
         assertThatEventTypesAreSortedInDatabase();
     }
@@ -76,6 +85,6 @@ class SubscriptionCreateControllerIntegrationTest extends IntegrationTestBase {
     private void assertThatEventTypesAreSortedInDatabase() {
         List<ClientSubscriptionEntity> entities = subscriptionRepository.findAll();
         assertThat(entities).hasSize(1);
-        assertThat(entities.get(0).getEventTypes().get(0)).isEqualTo(PRISON_COURT_REGISTER_GENERATED);
+        assertThat(entities.getFirst().getEventTypes().getFirst()).isEqualTo("PRISON_COURT_REGISTER_GENERATED");
     }
 }
